Rejigger the imgalign mixer so that we can use it on .wp-block-embed.alignright and .alignleft. Fix caption styles on aligned images.

--- a/less/inc/mixins.less
+++ b/less/inc/mixins.less
@@ -689,11 +689,10 @@
   }
 }
 .imgalign() {
-  .alignleft, .alignright {
+  width: 100%;
+  max-width: 100%;
+  display: block;
+  img {
     width: 100%;
-    display: block;
-    img {
-      width: 100%;
-    }
   }
 }
