--- a/less/inc/responsive-767px-max.less
+++ b/less/inc/responsive-767px-max.less
@@ -135,11 +135,17 @@
       margin-bottom: 0.5em;
     }
   }
-  .wp-block-image,
-  figure{
+  .alignleft,
+  .alignright,
+  .wp-block-image .alignleft,
+  .wp-block-image .alignright,
+  .wp-block-embed.alignleft,
+  .wp-block-embed.alignright,
+  figure .alignleft,
+  figure .alignright,
+  {
     .imgalign();
   }
-  .imgalign();
 }
 
 // UP TO LANDSCAPE PHONE
